name:                odepack-hs
version:             0
synopsis:            partial binding to ODEPACK
description:         partial binding to ODEPACK
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt
maintainer:          Adam Vogt <vogt.adam@gmail.com>
category:            Development, Math
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  cbits/odepack.h

library
  exposed-modules:     Odepack
                       Odepack.Raw
  default-extensions:  DataKinds
                       FlexibleContexts
                       ForeignFunctionInterface
                       PolyKinds
                       QuasiQuotes
                       RankNTypes
                       TemplateHaskell
                       ViewPatterns
  build-depends:       
                       ad >= 3.4,
                       base <5,
                       HList >= 0.3.4,
                       vector
  build-tools:         c2hs
  default-language:    Haskell2010
  c-sources:           cbits/odepack.c
  cc-options:          -std=c90
  include-dirs:        cbits
  extra-libraries:     f2c
